# HumanGL

./: .gitignore  .gitmodules  Cargo.toml  README.md
humangl/: Cargo.toml
humangl/shaders/: fragment_shader.fs  vertex_shader.vs
humangl/src/: animation.rs  bone.rs  compute_shader.rs  create_cuboid.rs  create_rectangle.rs  dance.rs  jump.rs  main.rs  mesh.rs  node.rs  render.rs  sphere_interp.rs  still.rs  test_animation.rs  tree.rs  walk.rs
humangl/src/animations/: dance.rs  jump.rs  mod.rs  punch.rs  still.rs  walk.rs
src/humangl/: main.rs  render.rs
