[package]
name = "human_gl"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "human_gl"
path = "src/humangl/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "matrix_lib"
path = "matrix/src/lib.rs"

[dependencies]
# matrix dependencies
assert_float_eq = "1.1.3"
num-complex = "0.4.3"
num-traits = "0.2.15"

# human_gl dependencies
gl = "0.14.0"
glfw = "0.52.0"

